engins and readme updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "learn-starter",
+  "name": "spacex-mission-challenge",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.15.1"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
